# ndp-ep-py

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CJANGELOG.md  LICENSE  README.md  cleanup_test_services.py  pyproject.toml  pytest.ini  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py  test_documentation.py
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  README.md  requirements.txt
docs/source/: api_reference.rst  authentication.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/source/tutorials/: bulk_resource_management.ipynb  getting_started.ipynb  pelican_federation.ipynb  resource_management.ipynb  s3_management.ipynb  s3_to_dataset_integration.ipynb
docs/source/user_guide/: organizations.rst
ndp_ep/: __init__.py  api_client.py  client_base.py  dataset_resource_method.py  delete_organization_method.py  delete_resource_method.py  get_kafka_details_method.py  get_system_status_method.py  get_user_info_method.py  list_organization_method.py  pelican_method.py  register_dataset_method.py  register_kafka_method.py  register_organization_method.py  register_s3_method.py  register_service_method.py  register_url_method.py  resource_method.py  rexec_method.py  s3_buckets_method.py  s3_objects_method.py  search_method.py  update_dataset_method.py  update_kafka_method.py  update_s3_method.py  update_service_method.py  update_url_method.py  version_config.py
tests/: test_additional_methods.py  test_client_base.py  test_dataset_resource_method.py  test_error_cases.py  test_pelican_method.py  test_register_methods.py  test_register_organization_method.py  test_remote_func_export.py  test_resource_method.py  test_rexec_method.py  test_s3_management.py  test_search_method.py  test_user_info_method.py  test_version_compatibility.py
